# smol-llm

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  setup.sh
resources/: smolllm_tokenizer.json
src/commons/: aws_uploader.py
src/data_processing/: data_inspector.py  dataloader.py  dataset.py  hf_data_download.py
src/inference/: inference.py
src/models/: layers.py  models.py  tokenizer.py  transformer.py
src/training/: training.py
