[project]
name = "smol-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "boto3>=1.43.36",
    "datasets>=5.0.0",
    "python-dotenv>=1.2.2",
    "tokenizers>=0.22.2",
    "torch>=2.12.0",
    "transformers>=5.12.0",
]
