[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "smol-llm"
version = "0.1.0"
description = "A 109M-parameter language model built from scratch"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "boto3>=1.43.36",
    "datasets>=5.0.0",
    "python-dotenv>=1.2.2",
    "tokenizers>=0.22.2",
    "torch>=2.12.0",
    "transformers>=5.12.0",
    "huggingface_hub",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]